--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "bootstrap": "^5.3.3",
     "bootswatch": "^5.3.3",
+    "chart.js": "^4.4.4",
     "next": "14.2.5",
     "react": "^18",
     "react-bootstrap": "^2.10.4",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "sass": "^1.77.8"
   },
