--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^5.3.3",
     "bootswatch": "^5.3.3",
     "chart.js": "^4.4.4",
+    "mermaid": "^11.0.2",
     "next": "14.2.5",
     "react": "^18",
     "react-bootstrap": "^2.10.4",
